<resources>
    <string name="app_name">Quiz App</string>
    <string name="choose_the_right_null_safety_operator">Choose the right null safety operator ?</string>
    <string name="a1RB_text">\?</string>
    <string name="a2RB_text">\?:</string>
    <string name="a3RB_text">..</string>
    <string name="which_view_is_responsible_for_input_a_text">Which view is responsible for input a text ?</string>
    <string name="b1RB_text">Button</string>
    <string name="b2RB_text">EditText</string>
    <string name="b3RB_text">TextInputEditText</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
</resources>